// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should show Dashboard page when logged in 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav>
        <ul>
          <div
            class="welcome"
            data-testid="user-information"
          >
            <span
              class="username"
            >
              welcome: 
            </span>
          </div>
          <div
            class="navbar"
          >
            <div
              class="nav-buttons"
            >
              <button
                class="nav-button home"
              >
                Home
              </button>
              <button
                class="nav-button leaderboard-button"
                data-testid="heading"
              >
                LeaderBoard
              </button>
              <button
                class="nav-button add-pool"
              >
                Add New Pool
              </button>
              <button
                class="nav-button logout"
              >
                Logout
              </button>
            </div>
          </div>
        </ul>
      </nav>
      <div
        class="landing"
      >
        <h1>
          REDUX - PROJECT
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav>
      <ul>
        <div
          class="welcome"
          data-testid="user-information"
        >
          <span
            class="username"
          >
            welcome: 
          </span>
        </div>
        <div
          class="navbar"
        >
          <div
            class="nav-buttons"
          >
            <button
              class="nav-button home"
            >
              Home
            </button>
            <button
              class="nav-button leaderboard-button"
              data-testid="heading"
            >
              LeaderBoard
            </button>
            <button
              class="nav-button add-pool"
            >
              Add New Pool
            </button>
            <button
              class="nav-button logout"
            >
              Logout
            </button>
          </div>
        </div>
      </ul>
    </nav>
    <div
      class="landing"
    >
      <h1>
        REDUX - PROJECT
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`App should show Login page when not logged in 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav>
        <ul>
          <li>
            <input
              class="input"
              placeholder="Username"
              type="text"
              value=""
            />
            <input
              class="input"
              placeholder="Password"
              type="password"
              value=""
            />
            <br />
            <div
              class="btn-box"
            >
              <button
                class="btn"
                data-testid="login-heading"
              >
                Login
              </button>
            </div>
          </li>
        </ul>
      </nav>
      <div
        class="landing"
      >
        <h1>
          REDUX - PROJECT
        </h1>
      </div>
    </div>
  </body>,
  "container": <div>
    <nav>
      <ul>
        <li>
          <input
            class="input"
            placeholder="Username"
            type="text"
            value=""
          />
          <input
            class="input"
            placeholder="Password"
            type="password"
            value=""
          />
          <br />
          <div
            class="btn-box"
          >
            <button
              class="btn"
              data-testid="login-heading"
            >
              Login
            </button>
          </div>
        </li>
      </ul>
    </nav>
    <div
      class="landing"
    >
      <h1>
        REDUX - PROJECT
      </h1>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
